2024-05-08T16:23:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9005208305 # 254
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 363 743 / 364 745
* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 365 746
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-04-24] / [2024-05-08]

2024-05-02T16:22:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8927159885 # 236
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 361 741 / 364 745
* notice: next accum: outdated-unq outdated-all / unq all: 363 743 / 364 745
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-18] / []

2024-05-01T16:22:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8911953888 # 233
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-01
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 359 739 / 364 745
* notice: next accum: outdated-unq outdated-all / unq all: 361 741 / 364 745
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-17] / []

2024-04-30T01:19:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8887789138 # 228