@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-05-08T16:23:57Z",
+  "timestamp" : "2024-05-09T08:23:21Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 746,
-  "uniques" : 365,
+  "count" : 747,
+  "uniques" : 366,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
