@@ -1,3 +1,12 @@
+2024-05-09T08:23:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9014518713 # 256
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 365 746
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 366 747
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-09]
+
 2024-05-08T16:23:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9005208305 # 254
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
